# documentary

./: LICENSE.txt  README.md  pyproject.toml
src/documentary/: __about__.py  __init__.py  main.py  utils.py
tests/: __init__.py
